<resources>
    <string name="app_textView">Collab
        With
        Me
    </string>
    <string name="app_textView2">CollabWithMe
    </string>
    <string name="login_button">Log in</string>
    <string name="slogan_textView">Share ideas and collaborate with each other</string>
    <string name="registration_link_textView">Don\'t have an account? Sign up here</string>
    <string name="registration_textView">New Account</string>
    <string name="name_input_hint">First Name</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="lastname_input_hint">Last name</string>
    <string name="city_input_hint">City</string>
    <string name="registration_button">Register</string>
    <string name="todo">TODO</string>
    <string name="welcome_textView">Welcome back</string>
    <string name="profile_button">Profile</string>
    <string name="friends_button">Friends</string>
    <string name="find_people_button">Discover</string>
    <string name="messages_button">Messages</string>
    <string name="settings_textView">Settings</string>
    <string name="logout_textView">Log out</string>
    <string name="user_name">Username</string>
    <string name="music_production_btn">Music Producer</string>
    <string name="singer_btn">Singer</string>
    <string name="rapper_btn">Rapper</string>
    <string name="video_production_btn">Video Production</string>
    <string name="graphic_designer_btn">Graphic Designer</string>
    <string name="clothing_design_btn">Clothing Design</string>
    <string name="sound_engineer_btn">Sound Engineer</string>
    <string name="instrumentalist_btn">Instrumentalist</string>
    <string name="others_btn">Others</string>
    <string name="skills">Select one or more of your skills</string>
    <string name="cities_prompt">Choose a city</string>
    <string-array name="cities_array">
        <item>London</item>
        <item>Birmingham</item>
        <item>Manchester</item>
        <item>Bristol</item>
        <item>Swansea</item>
        <item>Cardiff</item>
    </string-array>
    <string name="london">London</string>
    <string name="bristol">Bristol</string>
    <string name="birmingham">Birmingham</string>
    <string name="manchester">Manchester</string>
    <string name="cardiff">Cardiff</string>
    <string name="swansea">Swansea</string>
    <string name="edinburgh">Edinburgh</string>
    <string name="dublin">Dublin</string>
    <string name="select_city">Where do you live?</string>
    <string name="change_city_btn">Change city</string>
    <string name="add_photo_btn">Add Photo</string>
    <string name="add_photo_next_btn">Next</string>
    <string name="add_photo_textView">Select a Profile Picture</string>
    <string name="change_photo_btn">Change Profile Picture</string>
    <string name="select_city_textView">Select a city</string>
    <string name="select_skills_textView">Select a skill</string>
    <string name="description_profile_textView">Bio and link your work</string>
    <string name="skillsPopUp">Skills</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="email_friend">Email : </string>
    <string name="skip">SKIP</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="all">All</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept_request">Accept</string>
    <string name="decline_request">Decline request</string>
    <string name="empty_friends">Start looking for new friends</string>
    <string name="new_message">New message</string>
    <string name="select_user">Select User</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="empty_messages">Start a new chat</string>
    <string name="empty_friend_requests">No friend requests</string>
    <string name="empty_friends_for_chat">First add new friends</string>


</resources>