<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChooseCityActivity">
    <Button
            android:text="@string/london"
            android:background="@drawable/london"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/londonBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bristolbtn"
            app:layout_constraintBottom_toTopOf="@+id/birminghamBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/bristol"
            android:background="@drawable/bristol"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/bristolbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/londonBtn"
            app:layout_constraintBottom_toTopOf="@+id/manchesterBtn" android:textSize="18sp" android:textStyle="bold"/>

    <Button
            android:text="@string/birmingham"
            android:background="@drawable/birmingham"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/birminghamBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/manchesterBtn"
            app:layout_constraintBottom_toTopOf="@+id/swanseaBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/manchester"
            android:background="@drawable/manchester"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/manchesterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardiffBtn"
            app:layout_constraintStart_toEndOf="@+id/birminghamBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/cardiff"
            android:background="@drawable/cardiff"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/cardiffBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/edinburghBtn"
            app:layout_constraintStart_toEndOf="@+id/swanseaBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/swansea"
            android:background="@drawable/swansea"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/swanseaBtn"
            app:layout_constraintBottom_toTopOf="@+id/dublinBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardiffBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/edinburgh"
            android:background="@drawable/edinburgh"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/edinburghBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dublinBtn" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/dublin"
            android:background="@drawable/dublin"
            android:layout_width="205dp"
            android:layout_height="170dp"
            android:id="@+id/dublinBtn"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/edinburghBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/select_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:fontFamily="@font/alfa_slab_one" android:textSize="30sp"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/londonBtn"
            android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>