<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FindPeopleActivity">

    <TextView
            android:id="@+id/activityTextView"
            android:layout_width="411dp"
            android:layout_height="46dp"
            android:background="@color/color3"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingVertical="3dp"
            android:paddingStart="55dp"
            android:paddingEnd="20dp"
            android:singleLine="false"
            android:text="@string/find_people_button"
            android:textColor="@color/color6"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:layout_marginEnd="363dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="@+id/activityTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow" />

    <TextView
            android:id="@+id/colourBackgroundTextView"
            android:layout_width="412dp"
            android:layout_height="30dp"
            android:background="@color/color16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityTextView" />

    <TextView
            android:id="@+id/colourBackground2TextView"
            android:layout_width="412dp"
            android:layout_height="30dp"
            android:background="@color/color16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/citiesScrollView" />

    <HorizontalScrollView
            android:id="@+id/citiesScrollView"
            android:layout_width="409dp"
            android:layout_height="58dp"
            android:scrollbars="none"
            android:background="@color/color16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colourBackgroundTextView">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/searchLondonBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/style1"
                    android:fontFamily="sans-serif"
                    android:text="@string/london"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchBristolBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/style1"
                    android:text="@string/bristol"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchBirminghamBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/birmingham"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchManchesterBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/manchester"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchSwanseaBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/swansea"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchCardiffBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/cardiff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchDublinBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/dublin"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchEdinburghBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/edinburgh"
                    android:textSize="18sp"
                    android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
            android:id="@+id/skillsScrollView"
            android:layout_width="409dp"
            android:layout_height="75dp"
            android:background="@color/color16"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colourBackground2TextView">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/searchMusicProducerBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/style1"
                    android:fontFamily="sans-serif"
                    android:text="@string/music_production_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchSingerBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/style1"
                    android:text="@string/singer_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchRapperBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/rapper_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchVideoProductionBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/video_production_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchGraphicDesignerBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/graphic_designer_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/searchClothingDesignBtn"
                    style="@android:style/Widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/style1"
                    android:text="@string/clothing_design_btn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
            android:id="@+id/selectCityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/select_city_textView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityTextView" />

    <TextView
            android:id="@+id/selectSkillsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/select_skills_textView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/citiesScrollView" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerView"
            android:layout_width="411dp"
            android:layout_height="605dp"
            android:background="@color/color17"
            android:foregroundGravity="center"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="24dp"
            android:paddingBottom="30dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skillsScrollView"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>