<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RegistrationActivity">

        <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="96dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/registration_textView"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/nameInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        <EditText
                android:id="@+id/nameInput"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/user_ic"
                android:ems="10"
                android:hint="@string/name_input_hint"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addUserImage" />

        <EditText
                android:id="@+id/passwordInput"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/key"
                android:ems="10"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <EditText
                android:id="@+id/emailInput"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/email"
                android:ems="10"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

        <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/user_ic"
                android:ems="10"
                android:hint="@string/lastname_input_hint"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInput" />

        <Button
                android:id="@+id/registrationBtn"
                style="@android:style/Widget.Button"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/style1"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/registration_button"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintVertical_bias="0.102" />

        <ImageView
                android:id="@+id/addUserImage"
                android:layout_width="118dp"
                android:layout_height="107dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTextView"
                app:srcCompat="@drawable/add_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>