<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".HomeScreenActivity">

            <Button
                    android:text="@string/profile_button"
                    android:layout_width="380dp"
                    android:layout_height="180dp"
                    android:id="@+id/profileBtn"
                    style="@android:style/Widget.Button" android:textSize="24sp" android:background="@drawable/style2"
                    android:fontFamily="@font/alfa_slab_one"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/appTextView" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.516"/>
            <Button
                    android:text="@string/friends_button"
                    android:layout_width="380dp"
                    android:layout_height="180dp"
                    android:id="@+id/friendsBtn"
                    style="@android:style/Widget.Button" android:textSize="24sp" android:background="@drawable/style3"
                    android:fontFamily="@font/alfa_slab_one"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/profileBtn" app:layout_constraintHorizontal_bias="0.483"/>

            <Button
                    android:text="@string/find_people_button"
                    android:layout_width="380dp"
                    android:layout_height="180dp"
                    android:id="@+id/findPeopleBtn" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="45dp"
                    style="@android:style/Widget.Button" android:textSize="24sp" android:background="@drawable/style4"
                    android:fontFamily="@font/alfa_slab_one"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="45dp"
                    app:layout_constraintHorizontal_bias="0.491" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/friendsBtn"/>

            <Button
                    android:text="@string/messages_button"
                    android:layout_width="380dp"
                    android:layout_height="180dp"
                    android:id="@+id/messagesBtn"
                    style="@android:style/Widget.Button" android:textSize="24sp" android:background="@drawable/style5"
                    android:fontFamily="@font/alfa_slab_one"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/findPeopleBtn"
                    app:layout_constraintHorizontal_bias="0.516" android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/app_textView2"
            android:layout_width="417dp"
            android:layout_height="47dp"
            android:id="@+id/appTextView" android:textColor="@color/color6"
            android:background="@color/color2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingVertical="3dp"
            android:textSize="30sp" android:textStyle="bold"
            android:fontFamily="@font/alfa_slab_one" android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:singleLine="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
